# junior-technical-test-template

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: api_test.py  conftest.py
user_monitoring/: api.py  app.py  main.py  models.py  utils.py
