[tool.poetry]
package-mode = false
name = "junior-technical-test-template"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.3"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
exclude = [".venv/"]
